# nsga

./: Cargo.toml  LICENSE  README.md
src/: candidate_f64.rs  evaluator.rs  lib.rs  optimizer.rs  test_sch.rs  test_sum.rs
src/examples/binh-korn/: README.md  candidate_f64_pair.rs  main.rs
