[package]
name = "nsga"
version = "0.1.0"
authors = ["Max Kuznetsov <syhpoon@syhpoon.ca>"]
edition = "2021"
description = "Multi-objective genetic optimization algorithm NSGA-II"
homepage = "https://github.com/syhpoon/nsga"
repository = "http://github.com/syhpoon/nsga"
license = "MIT"
keywords = ["optimization"]
categories = ["algorithms", "science"]
readme = "README.md"

[dependencies]
rand = "0.8.4"
peeking_take_while = "0.1"
